We have beating but even a solo target now beats.

--- a/src/ToDo.txt
+++ b/src/ToDo.txt
@@ -8,3 +8,5 @@
 -- A is more accurate at low alpha, B at greater. Both only reliable up to 10 deg.
 
 -- TODO: Calibration pips. See page 9 of supervisor's handbook.
+
+-- TODO: IFF
