--- a/src/ToDo.txt
+++ b/src/ToDo.txt
@@ -1,6 +1,8 @@
 
 TODO: Static background trace with ground reflections.
 
+TODO: More 'randomness' in multiple echo scenarios.
+
 TODO: "Buzzing" background trace.
 
 TODO: Only the echoes are drawn dynamically, atop the ground reflections.
@@ -10,3 +12,13 @@ TODO: Treat formations as units, with their intrinsic dancing patterns.
 TODO: Reconsider WebGL, bearing in mind all the above.
 
 TODO: IFF.
+
+TODO: Replace popout nav bar with simple "tabs" at top.
+
+TODO: "Proper" operator panel layout.
+
+TODO: Electronic calculator output.
+
+TODO: Narrative and on-screen prompts.
+
+TODO: Physical knobs!!
